--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "typeRoots": ["./types", "./node_modules/@types", "./node_modules"],
     "types": ["vitest/globals"]
   },
   "exclude": ["node_modules", "eslint.config.mjs"],
